validaciones vista venta y persona

--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -148,6 +148,10 @@
                                     style="color:red; display:none; font-size: 15px; padding-left: 4px;">
                                     <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un email
                                 </span>
+                                <span id="errorMensajeEmail2"
+                                    style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>El formato del email tiene que ser valido
+                                </span>
                             </div>
 
                             <div class="mb-2 col-md-6">
