--- a/ClubSoft/Views/Ventas/NuevaVenta.cshtml
+++ b/ClubSoft/Views/Ventas/NuevaVenta.cshtml
@@ -66,7 +66,7 @@
                                 <!-- Cantidad -->
                                 <div class="mb-2 col-md-2">
                                     <label for="Cantidad" class="form-label fw-bold">Cantidad</label>
-                                    <input type="number" class="form-control" id="Cantidad" min="1" value="1">
+                                    <input type="number" id="Cantidad" name="Cantidad" value="1" min="1" class="form-control" />
                                 </div>
                                 <!-- Botón Agregar -->
                                 <div class="mb-2 col-md-2 d-flex align-items-end">
