--- a/ClubSoft/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ClubSoft/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewData["Title"] = "Iniciar Sesión";
 }
- <div class="col fo1" >
+ <div class="col fo1 login-responsivo " >
         <section class="text-center">
             <form id="account" method="post">
                 <img src="~/img/LogoClubSoft-sinfondo.png" style="width: 100px;" alt="logo" />
