--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -129,7 +129,7 @@
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades"
                         asp-action="Index"><i class="fas fa-city pe-2"></i>Localidades</a>
                         <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Graficos"
-                        asp-action="Index"><i class="fas fa-city pe-2"></i>Graficos</a>
+                        asp-action="Index"><i class="fas fa-chart-pie pe-2"></i>Graficos</a>
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home"
                         asp-action="Privacy">Privacy</a>
                 </div>
