ventas casi definitivo

--- a/ClubSoft/Views/Productos/Index.cshtml
+++ b/ClubSoft/Views/Productos/Index.cshtml
@@ -26,7 +26,7 @@
               <tr>
                 @* <th>Imagen</th> *@
                 <th>Nombre</th>
-                <th class="ocultar-en-768px">Precio</th>
+                <th class="ocultar-en-768px text-end">Precio</th>
                 <th class="text-center">Cantidad</th>
                 <th class="text-center ocultar-en-768px">Descripcion</th>
                 <th class="text-center ocultar-en-768px">Tipo de Producto</th>
