--- a/ClubSoft/Views/Ventas/Index.cshtml
+++ b/ClubSoft/Views/Ventas/Index.cshtml
@@ -27,8 +27,9 @@
                                 <th>Nº Venta</th>
                                 <th>Cliente</th>
                                 <th>Fecha</th>
-                                <th>Total</th>
-                                <th></th>
+                                <th class="text-end">Total</th>
+                                <th style="width: 70px"></th>
+                                <th style="width: 70px"></th>
                             </tr>
                         </thead>
                         <tbody id="tbody-Ventas">
@@ -43,10 +44,10 @@
     <!-- Modal para ver detalles de la venta -->
 <div class="modal fade" id="detalleVentaModal" tabindex="-1" aria-labelledby="detalleVentaLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
-        <div class="modal-content">
+        <div class="modal-content container-modal">
             <div class="modal-header">
-                <h5 class="modal-title" id="detalleVentaLabel">Detalles de la Venta</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                <h5 class="modal-title text-color" id="detalleVentaLabel">Detalles de la Venta</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
             <div class="modal-body">
                 <div class="table-responsive">
@@ -54,9 +55,9 @@
                         <thead>
                             <tr>
                                 <th>Producto</th>
-                                <th>Precio</th>
-                                <th>Cantidad</th>
-                                <th>SubTotal</th>
+                                <th class="text-end">Precio</th>
+                                <th class="text-center">Cantidad</th>
+                                <th class="text-end">SubTotal</th>
                             </tr>
                         </thead>
                         <tbody id="detalleVentaTabla">
@@ -65,7 +66,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn boton-color" data-bs-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
