--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -126,10 +126,16 @@
                     
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias"
                         asp-action="Index"><i class="fas fa-map-marker-alt pe-2"></i>Provincias</a>
+
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades"
                         asp-action="Index"><i class="fas fa-city pe-2"></i>Localidades</a>
-                        <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Graficos"
+                    
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Informes"
+                        asp-action="Index"><i class="fa-regular fa-folder-open pe-2"></i>Informes</a>
+
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Graficos"
                         asp-action="Index"><i class="fas fa-chart-pie pe-2"></i>Graficos</a>
+
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home"
                         asp-action="Privacy">Privacy</a>
                 </div>
