--- a/ClubSoft/Views/Home/Inicio.cshtml
+++ b/ClubSoft/Views/Home/Inicio.cshtml
@@ -3,11 +3,12 @@
 }
 <link rel="stylesheet" href="~/css/Inicio.css" asp-append-version="true" />
 
-<h1 class="text-center mt-3">¡Bienvenido @User.Identity?.Name!</h1>
+@* <h1 class="text-center mt-3">¡Bienvenido @User.Identity?.Name!</h1> *@
 
-<div class="container mt-5">
+<div class="container mt-5 p-3 custom-container">
+    <h2 class="text-center mb-4">Accesos Rápidos</h2>
     <div class="row">
-        <div class="col-md-3 mb-4 col-sm-12">
+        @* <div class="col-md-3 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
@@ -25,8 +26,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        </div> *@
+        @* <div class="col-md-3 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
@@ -44,13 +45,13 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        </div> *@
+        <div class="col-md-2 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3 text-center">
-                            <i class="fas fa-users fa-3x mb-3"></i>
+                            <i class="fas fa-users fa-2x mb-2"></i>
                         </div>
                         <div class="col-9">
                             <h5 class="titulo-card">Personas</h5>
@@ -64,12 +65,12 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        <div class="col-md-2 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3 text-center">
-                            <i class="fas fa-calendar-days fa-3x mb-3"></i>
+                            <i class="fas fa-calendar-days fa-2x mb-2"></i>
                         </div>
                         <div class="col-9">
                             <h5 class="titulo-card">Eventos</h5>
@@ -83,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        @* <div class="col-md-3 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
@@ -101,16 +102,16 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        </div> *@
+        <div class="col-md-2 mb-2 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3 text-center">
-                            <i class="fa-solid fa-list fa-3x mb-3"></i>
+                            <i class="fa-solid fa-list fa-2x mb-2"></i>
                         </div>
                         <div class="col-9">
-                            <h5 class="titulo-card">Productos</h5>
+                            <h5 class="titulo-card">Producto</h5>
                         </div>
                         <div class="text-end w-100">
                             <a class="btn btn-primary" asp-controller="Productos" asp-action="Index">
@@ -121,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        @* <div class="col-md-3 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
@@ -139,13 +140,13 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        </div> *@
+        <div class="col-md-2 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3 text-center">
-                            <i class="fa-solid fa-cart-shopping fa-3x mb-3"></i>
+                            <i class="fa-solid fa-cart-shopping fa-2x mb-2"></i>
                         </div>
                         <div class="col-9">
                             <h5 class="titulo-card">Ventas</h5>
@@ -159,15 +160,15 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        <div class="col-md-2 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3 text-center">
-                            <i class="fa-solid fa-pen-to-square fa-3x mb-3"></i>
+                            <i class="fa-solid fa-pen-to-square fa-2x mb-2"></i>
                         </div>
                         <div class="col-9">
-                            <h5 class="titulo-card">Cuentas Corrientes</h5>
+                            <h5 class="titulo-card">Cuentas</h5>
                         </div>
                         <div class="text-end w-100">
                             <a class="btn btn-primary" asp-controller="CuentaCorrientes" asp-action="Index">
@@ -178,7 +179,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        @* <div class="col-md-3 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
@@ -196,8 +197,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-3 mb-4 col-sm-12">
+        </div> *@
+        @* <div class="col-md-3 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
                     <div class="row">
@@ -215,6 +216,49 @@
                     </div>
                 </div>
             </div>
+        </div> *@
+        <div class="col-md-2 mb-4 col-sm-12">
+            <div class="card custom-card d-flex align-items-center">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-3 text-center">
+                            <i class="fa-solid fa-cash-register fa-2x mb-2"></i>
+                        </div>
+                        <div class="col-9">
+                            <h5 class="titulo-card">Cobros</h5>
+                        </div>
+                        <div class="text-end w-100">
+                            <a class="btn btn-primary" asp-controller="CuentaCorrientes" asp-action="Index">
+                                <i class="fas fa-arrow-right ml-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</div>
+
+<div class="container mt-5 p-3 contenedor2">
+    <div class="row gap-5 justify-content-center">
+
+        <div class="card shadow-sm col-md-5 " >
+            <h3 class="card-header bg-white text-end">
+                <i class="fa-solid fa-cart-shopping pe-2"></i>Ventas Por Cliente
+            </h3>
+            <div class="card-body">
+
+            </div>
+        </div>
+        <div class="card ml-2 shadow-sm col-md-5 " >
+            <h3 class="card-header bg-white text-end">
+                <i class="fa-solid fa-cart-shopping pe-2"></i>Ventas Por Cliente
+            </h3>
+            <div class="card-body">
+
+            </div>
+        </div>
+
+    </div>
+
 </div>
