listado ventas por cliente

--- a/ClubSoft/Views/Home/Inicio.cshtml
+++ b/ClubSoft/Views/Home/Inicio.cshtml
@@ -9,42 +9,42 @@
     <h2 class="text-center mb-4">Accesos Rápidos</h2>
     <div class="row">
         @* <div class="col-md-3 mb-4 col-sm-12">
-            <div class="card custom-card d-flex align-items-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3 text-center">
-                            <i class="fas fa-map-marker-alt fa-3x mb-3"></i>
-                        </div>
-                        <div class="col-9">
-                            <h5 class="titulo-card">Provincias</h5>
-                        </div>
-                        <div class="text-end w-100">
-                            <a class="btn btn-primary" asp-controller="Provincias" asp-action="Index">
-                                <i class="fas fa-arrow-right ml-2"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="card custom-card d-flex align-items-center">
+        <div class="card-body">
+        <div class="row">
+        <div class="col-3 text-center">
+        <i class="fas fa-map-marker-alt fa-3x mb-3"></i>
+        </div>
+        <div class="col-9">
+        <h5 class="titulo-card">Provincias</h5>
+        </div>
+        <div class="text-end w-100">
+        <a class="btn btn-primary" asp-controller="Provincias" asp-action="Index">
+        <i class="fas fa-arrow-right ml-2"></i>
+        </a>
+        </div>
+        </div>
+        </div>
+        </div>
         </div> *@
         @* <div class="col-md-3 mb-4 col-sm-12">
-            <div class="card custom-card d-flex align-items-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3 text-center">
-                            <i class="fas fa-city fa-3x mb-3"></i>
-                        </div>
-                        <div class="col-9">
-                            <h5 class="titulo-card">Localidades</h5>
-                        </div>
-                        <div class="text-end w-100">
-                            <a class="btn btn-primary" asp-controller="Localidades" asp-action="Index">
-                                <i class="fas fa-arrow-right ml-2"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="card custom-card d-flex align-items-center">
+        <div class="card-body">
+        <div class="row">
+        <div class="col-3 text-center">
+        <i class="fas fa-city fa-3x mb-3"></i>
+        </div>
+        <div class="col-9">
+        <h5 class="titulo-card">Localidades</h5>
+        </div>
+        <div class="text-end w-100">
+        <a class="btn btn-primary" asp-controller="Localidades" asp-action="Index">
+        <i class="fas fa-arrow-right ml-2"></i>
+        </a>
+        </div>
+        </div>
+        </div>
+        </div>
         </div> *@
         <div class="col-md-2 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
@@ -85,23 +85,23 @@
             </div>
         </div>
         @* <div class="col-md-3 mb-4 col-sm-12">
-            <div class="card custom-card d-flex align-items-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3 text-center">
-                            <i class="fas fa-calendar-days fa-3x mb-3"></i>
-                        </div>
-                        <div class="col-9">
-                            <h5 class="titulo-card">Tipos de Eventos</h5>
-                        </div>
-                        <div class="text-end w-100">
-                            <a class="btn btn-primary" asp-controller="Eventos" asp-action="Index">
-                                <i class="fas fa-arrow-right ml-2"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="card custom-card d-flex align-items-center">
+        <div class="card-body">
+        <div class="row">
+        <div class="col-3 text-center">
+        <i class="fas fa-calendar-days fa-3x mb-3"></i>
+        </div>
+        <div class="col-9">
+        <h5 class="titulo-card">Tipos de Eventos</h5>
+        </div>
+        <div class="text-end w-100">
+        <a class="btn btn-primary" asp-controller="Eventos" asp-action="Index">
+        <i class="fas fa-arrow-right ml-2"></i>
+        </a>
+        </div>
+        </div>
+        </div>
+        </div>
         </div> *@
         <div class="col-md-2 mb-2 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
@@ -123,23 +123,23 @@
             </div>
         </div>
         @* <div class="col-md-3 mb-4 col-sm-12">
-            <div class="card custom-card d-flex align-items-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3 text-center">
-                            <i class="fa-solid fa-list fa-3x mb-3"></i>
-                        </div>
-                        <div class="col-9">
-                            <h5 class="titulo-card">Tipos Productos</h5>
-                        </div>
-                        <div class="text-end w-100">
-                            <a class="btn btn-primary" asp-controller="TipoProductos" asp-action="Index">
-                                <i class="fas fa-arrow-right ml-2"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="card custom-card d-flex align-items-center">
+        <div class="card-body">
+        <div class="row">
+        <div class="col-3 text-center">
+        <i class="fa-solid fa-list fa-3x mb-3"></i>
+        </div>
+        <div class="col-9">
+        <h5 class="titulo-card">Tipos Productos</h5>
+        </div>
+        <div class="text-end w-100">
+        <a class="btn btn-primary" asp-controller="TipoProductos" asp-action="Index">
+        <i class="fas fa-arrow-right ml-2"></i>
+        </a>
+        </div>
+        </div>
+        </div>
+        </div>
         </div> *@
         <div class="col-md-2 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
@@ -180,42 +180,42 @@
             </div>
         </div>
         @* <div class="col-md-3 mb-4 col-sm-12">
-            <div class="card custom-card d-flex align-items-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3 text-center">
-                            <i class="fa-solid fa-address-card fa-3x mb-3"></i>
-                        </div>
-                        <div class="col-9">
-                            <h5 class="titulo-card">Socios Titulares</h5>
-                        </div>
-                        <div class="text-end w-100">
-                            <a class="btn btn-primary" asp-controller="SocioTitulares" asp-action="Index">
-                                <i class="fas fa-arrow-right ml-2"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="card custom-card d-flex align-items-center">
+        <div class="card-body">
+        <div class="row">
+        <div class="col-3 text-center">
+        <i class="fa-solid fa-address-card fa-3x mb-3"></i>
+        </div>
+        <div class="col-9">
+        <h5 class="titulo-card">Socios Titulares</h5>
+        </div>
+        <div class="text-end w-100">
+        <a class="btn btn-primary" asp-controller="SocioTitulares" asp-action="Index">
+        <i class="fas fa-arrow-right ml-2"></i>
+        </a>
+        </div>
+        </div>
+        </div>
+        </div>
         </div> *@
         @* <div class="col-md-3 mb-4 col-sm-12">
-            <div class="card custom-card d-flex align-items-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3 text-center">
-                            <i class="fa-solid fa-address-card fa-3x mb-3"></i>
-                        </div>
-                        <div class="col-9">
-                            <h5 class="titulo-card">Socios Adherentes</h5>
-                        </div>
-                        <div class="text-end w-100">
-                            <a class="btn btn-primary" asp-controller="SocioAdherentes" asp-action="Index">
-                                <i class="fas fa-arrow-right ml-2"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="card custom-card d-flex align-items-center">
+        <div class="card-body">
+        <div class="row">
+        <div class="col-3 text-center">
+        <i class="fa-solid fa-address-card fa-3x mb-3"></i>
+        </div>
+        <div class="col-9">
+        <h5 class="titulo-card">Socios Adherentes</h5>
+        </div>
+        <div class="text-end w-100">
+        <a class="btn btn-primary" asp-controller="SocioAdherentes" asp-action="Index">
+        <i class="fas fa-arrow-right ml-2"></i>
+        </a>
+        </div>
+        </div>
+        </div>
+        </div>
         </div> *@
         <div class="col-md-2 mb-4 col-sm-12">
             <div class="card custom-card d-flex align-items-center">
@@ -241,16 +241,29 @@
 
 <div class="container mt-5 p-3 contenedor2">
     <div class="row gap-5 justify-content-center">
-
-        <div class="card shadow-sm col-md-5 " >
-            <h3 class="card-header bg-white text-end">
-                <i class="fa-solid fa-cart-shopping pe-2"></i>Ventas Por Cliente
-            </h3>
-            <div class="card-body">
-
+        <div class="card shadow-sm col-md-5">
+            <div class="card-header bg-white text-end">
+                <h3>
+                    <i class="fa-solid fa-cart-shopping pe-2"></i>Ventas Por Cliente
+                </h3>
+            </div>
+            <div class="pb-3">
+                <div class="table-responsive" style="height: 450px; overflow-y: auto;">
+                    <table class="table table-hover align-middle">
+                        <thead>
+                            <tr>
+                                <th>CLIENTE</th>
+                                <th class="text-end">Fecha</th>
+                                <th class="text-end">Total</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tbody-InformeVentas">
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-        <div class="card ml-2 shadow-sm col-md-5 " >
+        <div class="card ml-2 shadow-sm col-md-5 ">
             <h3 class="card-header bg-white text-end">
                 <i class="fa-solid fa-cart-shopping pe-2"></i>Ventas Por Cliente
             </h3>
@@ -262,3 +275,7 @@
     </div>
 
 </div>
+
+@section Scripts {
+    <script src="~/js/Inicio.js"></script>
+}
