--- a/ClubSoft/Views/Informes/Index.cshtml
+++ b/ClubSoft/Views/Informes/Index.cshtml
@@ -20,7 +20,7 @@
         <div class="col-md-3 mb-4">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
-                    <h5 class="titulo-card">Eventos por Tipos de Eventos</h5>
+                    <h5 class="titulo-card">Listado Eventos por Tipos de Eventos</h5>
                     <div class="text-end w-100">
                         <a class="btn btn-primary" asp-area="" asp-controller="Eventos" asp-action="InformeEventos">
                             <i class="fas fa-arrow-right ml-2"></i>
@@ -32,9 +32,21 @@
         <div class="col-md-3 mb-4">
             <div class="card custom-card d-flex align-items-center">
                 <div class="card-body">
-                    <h5 class="titulo-card">Productos por Tipos de Productos</h5>
+                    <h5 class="titulo-card">Listado Productos por Tipos de Productos</h5>
                     <div class="text-end w-100">
                         <a class="btn btn-primary" asp-area="" asp-controller="Productos" asp-action="InformeProductos">
+                            <i class="fas fa-arrow-right ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 mb-4">
+            <div class="card custom-card d-flex align-items-center">
+                <div class="card-body">
+                    <h5 class="titulo-card">Listado Ventas por Persona</h5>
+                    <div class="text-end w-100">
+                        <a class="btn btn-primary" asp-area="" asp-controller="Ventas" asp-action="InformesVentas">
                             <i class="fas fa-arrow-right ml-2"></i>
                         </a>
                     </div>
