--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                                 asp-action="Index">Administrar productos</a>
                             <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="TipoProductos"
                                 asp-action="Index">Tipos de Productos</a>
-                                 <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Productos"
+                            <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Productos"
                                 asp-action="InformeProductos">Informe Productos</a>
                         </div>
                     </div>
@@ -97,9 +97,11 @@
                         </a>
                         <div class="collapse bg-light mx-2 rounded" id="ventasMenu">
                             <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Ventas"
-                        asp-action="NuevaVenta">Nueva Venta</a>
+                                asp-action="NuevaVenta">Nueva Venta</a>
                             <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Ventas"
-                                asp-action="Index">Listado</a>                          
+                                asp-action="Index">Listado</a>
+                            <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Ventas"
+                                asp-action="InformesVentas">Informe Ventas</a>                          
                         </div>
                     </div>
 
