--- a/ClubSoft/Views/Ventas/InformesVentas.cshtml
+++ b/ClubSoft/Views/Ventas/InformesVentas.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Informe Socios";
+    ViewData["Title"] = "Informe Ventas por Personas";
 }
 
 <div class="p-3">
@@ -8,33 +8,28 @@
         <div class="card shadow-sm">
             <div class="card-header row m-0 p-2">
                 <div class="col-md-6 offset-md-6 text-end">
-                    <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>INFORME SOCIOS</h3>
+                    <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>INFORME VENTAS</h3>
                 </div>
             </div>
-            <div class="card-body mb-5">
+            <div class="card-body">
                 <div class="table-responsive" style="height: 450px; overflow-y: auto;">
                     <table class="table table-hover align-middle">
                         <thead>
                             <tr>
-                                <th>SOCIO TITULAR</th>
-                                <th>SOCIO ADHERENTE</th>
+                                <th>CLIENTE</th>
+                                <th class="text-end">Fecha</th>
+                                <th class="text-end">Total</th>
                             </tr>
                         </thead>
-                        <tbody id="tbody-InformeSocios">
+                        <tbody id="tbody-InformeVentas">
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-
-
-
-
-
-
-
-    @section Scripts {
-        <script src="~/js/InformeSocios.js"></script>
-    }
+@section Scripts {
+    <script src="~/js/InformeVentas.js"></script>
+}
