--- a/ClubSoft/Views/Informes/Index.cshtml
+++ b/ClubSoft/Views/Informes/Index.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "Informes";
 }
-<link rel="stylesheet" href="~/css/Inicio.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/Informes.css" asp-append-version="true" />
 
 <div class="container mt-5">
     <div class="row justify-content-start">
