cobros casi terminado

--- a/ClubSoft/Views/Cobros/Index.cshtml
+++ b/ClubSoft/Views/Cobros/Index.cshtml
@@ -29,33 +29,17 @@
                                 <th>Cliente</th>
                                 <th>Fecha</th>
                                 <th>Total</th>
-                                <th>Estado</th>
                             </tr>
                         </thead>
-<<<<<<< HEAD
-                        <tbody id="tbody-Ventas">
-=======
                         <tbody id="tbody-Cobros">
->>>>>>> 9460d69acdfdeccc9f5595eeb1f2cc8ed2a2b17f
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
     </div>
-<<<<<<< HEAD
-=======
-
-@* <div>
-   <button class="boton-flotante" onclick="registrarCobro()">
-       PAGAR
-    </button>
-</div> *@
-
->>>>>>> 9460d69acdfdeccc9f5595eeb1f2cc8ed2a2b17f
-
 
  
   @section Scripts{
-  <script src="~/js/Cobros.js"></script>
+  <script src="~/js/NuevoCobro.js"></script>
 }
