--- a/ClubSoft/Views/Cobros/Index.cshtml
+++ b/ClubSoft/Views/Cobros/Index.cshtml
@@ -28,7 +28,7 @@
                                 <th>Nº Cobro</th>
                                 <th>Cliente</th>
                                 <th>Fecha</th>
-                                <th>Total</th>
+                                <th class="text-end">Total</th>
                             </tr>
                         </thead>
                         <tbody id="tbody-Cobros">
