--- a/ClubSoft/Views/Cobros/NuevoCobro.cshtml
+++ b/ClubSoft/Views/Cobros/NuevoCobro.cshtml
@@ -45,7 +45,7 @@
                                         <th>Seleccionar</th>
                                         <th>Número de Venta</th>
                                         <th>Fecha de Venta</th>
-                                        <th>Total</th>
+                                        <th class="text-end">Total</th>
                                     </tr>
                                 </thead>
                                 <tbody id="Tabla-Detalle"></tbody>
