--- a/ClubSoft/Views/Ventas/NuevaVenta.cshtml
+++ b/ClubSoft/Views/Ventas/NuevaVenta.cshtml
@@ -8,7 +8,7 @@
         <div class="card shadow-sm">
             <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>NUEVA VENTA</h3>
             <div>
-                <div class="card-body" style="height: 450px; overflow-y: auto;">
+                <div class="card-body" style="height: auto; overflow-y: auto;">
                     <form id="formVentaTemporal">
                         <input type="hidden" id="VentaID" value="0" />
                         <input type="hidden" id="UsuarioID" value="@User.Identity?.Name" />
