--- a/ClubSoft/Views/Cobros/Index.cshtml
+++ b/ClubSoft/Views/Cobros/Index.cshtml
@@ -20,14 +20,14 @@
                     <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>COBROS</h3>
                 </div>
             </div>
-            <div class="card-body mb-5">
+            <div class="card-body">
                 <div class="table-responsive" style="height: 450px; overflow-y: auto;">
                     <table class="table table-hover">
                         <thead>
                             <tr>
-                                <th>Nº Cobro</th>
-                                <th>Cliente</th>
-                                <th>Fecha</th>
+                                <th class="text-center">Nº Cobro</th>
+                                <th class="text-center">Cliente</th>
+                                <th class="text-center">Fecha</th>
                                 <th class="text-end">Total</th>
                             </tr>
                         </thead>
@@ -36,10 +36,11 @@
                     </table>
                 </div>
             </div>
+            <div id="paginacion" class="card-footer"></div> 
         </div>
     </div>
 
  
   @section Scripts{
-  <script src="~/js/NuevoCobro.js"></script>
+  <script src="~/js/Cobros.js"></script>
 }
