--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ClubSoft.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/fontawesome/css/all.min.css" />
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 
 </head>
 
