--- a/ClubSoft/Views/Cobros/Index.cshtml
+++ b/ClubSoft/Views/Cobros/Index.cshtml
@@ -29,6 +29,7 @@
                                 <th class="text-center">Cliente</th>
                                 <th class="text-center">Fecha</th>
                                 <th class="text-end">Total</th>
+                                <th style="width: 70px"></th>
                             </tr>
                         </thead>
                         <tbody id="tbody-Cobros">
