--- a/ClubSoft/wwwroot/css/CuentaCorrientes.css
+++ b/ClubSoft/wwwroot/css/CuentaCorrientes.css
@@ -40,3 +40,34 @@
 color: white;
 }
 
+/* INPUT BUSCAR */
+.search {
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  margin-left: 10px;
+  border: solid 1px #5b5b5b32;
+}
+
+.search i {
+  font-size: 18px;
+  color: #ccc;
+  margin-right: 10px;
+}
+
+.search input {
+  flex: 1;
+  width: 100%;
+  height: 40px;
+  border: none;
+}
+
+.search button {
+  height: 40px;
+  width: 40px;
+  background: rgb(12, 12, 86);
+  border: none;
+  border-radius: 0 5px 5px 0;
+  color: #fff;
+  cursor: pointer;
+}
