registro de venta y cobro en cuenta corriente

--- a/ClubSoft/Views/CuentaCorrientes/Index.cshtml
+++ b/ClubSoft/Views/CuentaCorrientes/Index.cshtml
@@ -30,11 +30,11 @@
                         <thead>
                             <tr>
                                 <th>Socio</th>
-                                <th>Fecha</th>
+                                <th class="text-center">Fecha</th>
+                                <th>Movimiento</th>
                                 <th class="text-end">Ingreso</th>
                                 <th class="text-end">Egreso</th>
                                 <th class="text-end">Saldo</th>
-                                <th class="text-end">Descripcion</th>
                                 <th style="width: 70px"></th>
                                 <th style="width: 70px"></th>
                             </tr>
