--- a/ClubSoft/Views/Cobros/NuevoCobro.cshtml
+++ b/ClubSoft/Views/Cobros/NuevoCobro.cshtml
@@ -31,8 +31,7 @@
 
                         <div class="mb-2 col-md-4">
                             <label for="fecha" class="form-label fw-bold">Fecha</label>
-                            <input type="date" id="fecha" class="form-control"
-                                value="@DateTime.Now.ToString("yyyy-MM-dd")" />
+                            <input type="datetime-local" id="fecha" name="fecha" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")">
                         </div>
                     </div>
                     
