--- a/ClubSoft/Views/Ventas/NuevaVenta.cshtml
+++ b/ClubSoft/Views/Ventas/NuevaVenta.cshtml
@@ -31,7 +31,7 @@
                                 <div class="mb-2 col-md-4 d-flex align-items-end">
                                     <div class="w-100">
                                         <label for="fecha" class="form-label fw-bold">Fecha</label>
-                                        <input type="date" id="fecha" name="fecha" class="form-control">
+                                        <input type="datetime-local" id="fecha" name="fecha" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")">
                                     </div>
                                 </div>
                             </div>
